# arcc

./: .gitignore  ARCC.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  release.yml
config/: config.toml
crates/arcc-cli/: Cargo.toml
crates/arcc-cli/src/: lib.rs
crates/arcc-core/: Cargo.toml
crates/arcc-core/src/: context.rs  feishu_client.rs  lib.rs  memory.rs  session.rs  system.rs  tools.rs
crates/arcc-core/src/mcp/: mod.rs  protocol.rs  scheduler.rs
crates/arcc-core/src/model/: deepseek.rs  dsml.rs  mock.rs  mod.rs  provider.rs  registry.rs  types.rs
crates/arcc-core/src/model/prompts/: cli.md  compress.md  memory_extract.md  mod.rs  plan.md  server.md  tui.md
crates/arcc-core/src/safety/: allowlist.rs  mod.rs  validator.rs
crates/arcc-core/src/task/: executor.rs
crates/arcc-core/tests/: tool_stream_test.rs
crates/arcc-server/: Cargo.toml
crates/arcc-server/src/: lib.rs  middleware.rs  scheduler.rs
crates/arcc-server/src/feishu/: card.rs  chat_queue.rs  executor.rs  mod.rs  webhook.rs
crates/arcc-server/src/routes/: chat.rs  health.rs  memory.rs  metrics.rs  mod.rs
crates/arcc-storage/: Cargo.toml
crates/arcc-storage/src/: lib.rs
crates/arcc-storage/src/audit/: mod.rs  reader.rs  types.rs  writer.rs
crates/arcc-storage/src/config/: loader.rs  mod.rs  watcher.rs
crates/arcc-storage/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs
crates/arcc-tui/: Cargo.toml
crates/arcc-tui/src/: commands.rs  lib.rs
crates/arcc-tui/src/event/: handler.rs  loop_event.rs  mod.rs
crates/arcc-tui/src/ui/: app.rs  components.rs  logo.rs  mod.rs
docs/: cli-tutorial.md  dsml-handling.md  interactive-command-and-sudo-password-handling.md  scheduler-and-queue.md  tui-tutorial.md
docs/skills/: arcc-cli-skill.md  arcc-cli.md
docs/tutorial/: cli-tutorial.md  server-tutorial.md  tui-tutorial.md
scripts/: arcc.rb  health_check.sh  install.ps1  install.sh
src/: main.rs
