[package]
name = "arcc-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
tiktoken-rs.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
rusqlite.workspace = true
arcc-storage.workspace = true
