[package]
name = "arcc-storage"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
